@@ -10,6 +10,7 @@ local addonInfo, InternalInterface = ...
 local addonID = addonInfo.identifier
 
 local outputFunction = print
+local popupManager = nil
 InternalInterface.Output = InternalInterface.Output or {}
 
 -- ***************************************************************************************************************************************************
@@ -37,4 +38,22 @@ end
 -- ***************************************************************************************************************************************************
 function InternalInterface.Output.Write(text)
 	outputFunction(text)
+end
+
+-- ***************************************************************************************************************************************************
+-- * GetPopupManager                                                                                                                                 *
+-- ***************************************************************************************************************************************************
+-- * Returns the current popup manager                                                                                                               *
+-- ***************************************************************************************************************************************************
+function InternalInterface.Output.GetPopupManager()
+	return popupManager
+end
+
+-- ***************************************************************************************************************************************************
+-- * SetPopupManager                                                                                                                                 *
+-- ***************************************************************************************************************************************************
+-- * Changes the popup manager                                                                                                                       *
+-- ***************************************************************************************************************************************************
+function InternalInterface.Output.SetPopupManager(manager)
+	popupManager = manager
 end
